# attestation

./: README.md  pyproject.toml  requirements.txt
Attestation/: env.sample
Attestation/base/: models.py  permissions.py  urls.py  views.py
Attestation/comment/: models.py  serializers.py  urls.py  views.py
Attestation/comment/migrations/: 0001_initial.py  0002_initial.py  0003_alter_comment_table.py
Attestation/config/: settings.py  urls.py
Attestation/post/: admin.py  models.py  serializers.py  urls.py  views.py
Attestation/post/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_table.py  0004_alter_post_image.py
Attestation/user/: models.py  serializers.py  urls.py  views.py
Attestation/user/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py  0003_alter_user_birthday_alter_user_number.py
